--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
             <h3>好きなこと・趣味</h3>
             <ul>
                 <li>🎮 ゲーム（特に[好きなゲーム名]）</li>
-                <li>📚 読書（[好きなジャンル]が好き）</li>
+                <li>📚 読書（[ビジネス書]が好き）</li>
                 <li>🎵 音楽を聴くこと</li>
-                <li>💻 プログラミング（今日から！）</li>
+                <li>💻 プログラミング（学生ぶりです！）</li>
             </ul>
         </div>
 
@@ -77,7 +77,7 @@
         </div>
 
         <div class="github-link">
-            <p>GitHubで作成: <a href="https://github.com/[あなたのユーザー名]">[あなたのユーザー名]</a></p>
+            <p>GitHubで作成: <a href="https://github.com/[あなたのユーザー名]">[mtmtkzy]</a></p>
             <p>作成日: <span id="date"></span></p>
         </div>
     </div>
