--- a/index.html
+++ b/index.html
@@ -45,5 +45,5 @@
         // 今日の日付を表示
         document.getElementById('date').textContent = new Date().toLocaleDateString('ja-JP');
     </script>
-</body>
+<script src="script.js"></script></body>
 </html>
