--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="hobby-list">
             <h3>好きなこと・趣味</h3>
             <ul>
-                <li>🎮 ゲーム（特に[好きなゲーム名]）</li>
+                <li>🎮 ゲーム（特に[スポーツ]）</li>
                 <li>📚 読書（[ビジネス書]が好き）</li>
                 <li>🎵 音楽を聴くこと</li>
                 <li>💻 プログラミング（学生ぶりです！）</li>
